# RoboticArm-Game

./: .gitignore  main.cpp  package.sh  package_windows.sh
.claude/: settings.local.json
Game/: CMakeLists.txt  compile_commands.json  config.h  gravity.cpp  gravity.h  level.cpp  level.h  main.cpp  movement.cpp  movement.h  render.cpp  render.h  types.h
Game/.cache/clangd/index/: gravity.cpp.5C1D2FFD8D3951BB.idx  gravity.h.1AAECF64CC548154.idx  level.cpp.6C2FB9490AE8C2D3.idx  main.cpp.59F9207E8F738E59.idx  movement.cpp.826F7607E4B780A2.idx  movement.h.38095A3E904A6F4C.idx  render.cpp.661CE6C232270CD6.idx  test_movement.cpp.A1C2C1338E76E450.idx  test_physics.cpp.E8769321E9D11955.idx  types.h.30C2CFAA5CD1E095.idx
Game/levels/: level1.level  level2.level
Game/tests/: test_level.cpp  test_movement.cpp  test_physics.cpp
RoboticArmGame_Windows/: README.txt
RoboticArmGame_Windows/assets/arm/: generate_arm_sprites.py
RoboticArmGame_Windows/assets/gui/: generate_gui_sprites.py
RoboticArmGame_Windows/levels/: level1.level  level3.level  level4.level  level5.level
_win_build/SDL3-3.2.10/i686-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
_win_build/SDL3-3.2.10/x86_64-w64-mingw32/lib/cmake/SDL3/: SDL3ConfigVersion.cmake
_win_build/SDL3-3.2.10/x86_64-w64-mingw32/lib/pkgconfig/: sdl3.pc
craftpix-net-111332-free-factory-pixel-art-32x32-tileset-for-cyberpunk/PSD/: Animated_objects.psd  BackTiles.psd  Background.psd  Objects.psd  Tiles.psd
craftpix-net-861263-free-pirate-bay-tileset-pixel-art-for-cyberpunk/PSD/: Background.psd  Objects.psd  Tiles.psd
docs/superpowers/plans/: 2026-04-02-robotic-arm-game.md  2026-04-04-phase-b.md  2026-04-18-arm-sprite-integration.md
docs/superpowers/specs/: 2026-04-02-robotic-arm-game-design.md  2026-04-04-phase-b-design.md  2026-04-18-arm-sprite-integration-design.md
